[package]
name = "mdbook-typst"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.102", features = ["std"] }
clap = { version = "4.6.0", features = ["derive", "env"] }
mdbook-preprocessor = { version = "0.5.2", default-features = false }
normalize-path = "0.2.1"
pulldown-cmark = { version = "0.13.1", default-features = false, features = ["html"] }
serde = { version = "1.0", default-features = false }
serde_json = "1.0.149"
tar = { version = "0.4.45", default-features = false }
toml = { version = "0.8", default-features = false, features = ["parse"] }
typst = { version = "0.14.2", default-features = false }
typst-kit = { version = "0.14.2", features = ["embed-fonts"], default-features = false }
typst-svg = "0.14.2"
